# refboard

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup  LICENSE  README.md  TEAM.md  TODO.md  index.js  monitor-team.sh  package.json  start-team.sh  sync-worktrees.sh  worktree-guide.md
.claude/: settings.json
.claude/agents/: code-reviewer.md  designer.md  docs.md  frontend.md  generator.md  main.md  quality.md  researcher.md  template.md  tester.md
.claude/archive/: README.md  TEAM.md
.claude/hooks/: README.md  permission-check.sh  pre-commit.sh
.claude/reference/: code-style.md  commands.md  lessons-learned.md  roadmap.md  workflow.md
.claude/scripts/: README.md  monitor-context.sh  review-claude-md.sh  start-context-monitor.sh  stop-context-monitor.sh  test-monitor.sh
.claude/skills/: README.md
desktop/: index.html  package-lock.json  package.json  vite.config.js
desktop/docs/: openclaw-deep-integration.md  openclaw-integration.md  openclaw-usage-guide.md  openclaw-user-guide.md  test-report.md
desktop/src/: canvas.js  collection.js  compress.js  find-bar.js  floating-toolbar.js  generate-ui.js  home.js  icons.js  main.js  panels.js  search.js  shortcuts.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: ai.rs  api.rs  cli.rs  embed.rs  keyring.rs  lib.rs  log.rs  main.rs  ops.rs  search.rs  web.rs
desktop/src-tauri/src/storage/: local.rs  mod.rs  types.rs
docs/: FEATURES.md  PRD-v2.md  ai-vision-api-guide.md  api.md  clip-inference-benchmark.md  create-project-flow.md  dev-workflow.md  figma-home-ux.md  font-specification.md  openclaw-integration.md  pixijs-tauri-guide.md  plan-ai-image-generator.md  plan-node-connections.md  research-comfyui-loveart.md  research-grounding-dino-sam.md  research.md  tauri-guide.md  test-report.md  ui-vocabulary.md  user-guide.md
docs/research/: ai-vision-models.md  apple-macos-design-resources.md  cloud-feasibility.md  design-system-research.md  figma-cli-feasibility.md  minimax-vision.md  (+2 more)
lib/: ai-provider.js  dashboard.js  generator.js  server.js
spike/: pixi-demo.html
templates/: board.html  dashboard.html
(+29 files in other folders)
