[package]
name = "deco-desktop"
version = "2.0.0"
edition = "2021"
default-run = "deco-desktop"

[lib]
name = "deco_desktop_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
urlencoding = "2"
fastembed = "4"
chrono = "0.4"
sha2 = "0.10"

[[bin]]
name = "deco"
path = "src/bin/deco.rs"

[dev-dependencies]
tempfile = "3"
